[gd_scene load_steps=8 format=2]

[ext_resource path="res://Items/MushroomStatic.gd" type="Script" id=2]
[ext_resource path="res://Images/mushroom_leg.png" type="Texture" id=3]
[ext_resource path="res://Images/mushroom_head.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 6.91726 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.0754, 8.56836 )

[sub_resource type="Animation" id=5]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BigHead:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -14 ), Vector2( 0, -4 ), Vector2( 0, -18 ), Vector2( 0, -14 ) ]
}

[node name="Mushroom" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="BigHead" type="Sprite" parent="."]
position = Vector2( 0, -14 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9.17516 )
shape = SubResource( 1 )

[node name="Small" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Small"]
position = Vector2( 0, -9.68732 )
shape = SubResource( 2 )

[node name="Big" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Big"]
position = Vector2( 0, -12.5008 )
shape = SubResource( 3 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BigHead = SubResource( 5 )

[connection signal="body_entered" from="Small" to="." method="_on_Small_body_entered"]
[connection signal="body_entered" from="Big" to="." method="_on_Big_body_entered"]
